# bleepbloopmachine

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyrightconfig.json  wav2sketch  wav2sketch.c
bleepbloopmachine/: .gitignore  CMakeLists.txt  README.md  TAGS  bleepbloopmachine.ino  main.cc  main.cpp  sketch.json
bleepbloopmachine/.cache/clangd/index/: main.cc.85D9634248A00C9F.idx  main.h.B454EF62AA8DEABF.idx
bleepbloopmachine/src/: controls.cc  freq.h  main.cc  main.h
code/: code.py
code/lib/: freq.py
src/: block.cc  block.h  controls.cc  controls.h  display.cc  display.h  main.cc  track.cc  track.h  weirdmath.cc  weirdmath.h
src/kit/: AudioSampleC.cpp  AudioSampleC.h  AudioSampleH.cpp  AudioSampleH.h  AudioSampleK.cpp  AudioSampleK.h  AudioSampleO.cpp  AudioSampleO.h  AudioSampleS.cpp  AudioSampleS.h
stubs/_bleio/: __init__.pyi
stubs/_eve/: __init__.pyi
stubs/_pixelbuf/: __init__.pyi
stubs/_typing/: __init__.pyi
stubs/adafruit_bus_device/: __init__.pyi
stubs/aesio/: __init__.pyi
stubs/alarm/: __init__.pyi
stubs/analogio/: __init__.pyi
stubs/audiocore/: __init__.pyi
stubs/audiopwmio/: __init__.pyi
stubs/bitbangio/: __init__.pyi
stubs/board/: __init__.pyi
stubs/busio/: __init__.pyi
stubs/countio/: __init__.pyi
stubs/displayio/: __init__.pyi
stubs/gamepad/: __init__.pyi
stubs/gamepadshift/: __init__.pyi
stubs/ipaddress/: __init__.pyi
stubs/microcontroller/: __init__.pyi
stubs/network/: __init__.pyi
stubs/nvm/: __init__.pyi
stubs/pulseio/: __init__.pyi
stubs/rgbmatrix/: __init__.pyi
stubs/rtc/: __init__.pyi
stubs/sdcardio/: __init__.pyi
stubs/socket/: __init__.pyi
stubs/socketpool/: __init__.pyi
stubs/ssl/: __init__.pyi
stubs/storage/: __init__.pyi
stubs/supervisor/: __init__.pyi
stubs/time/: __init__.pyi
stubs/touchio/: __init__.pyi
stubs/ulab/: __init__.pyi
stubs/ulab/compare/: __init__.pyi
stubs/ulab/linalg/: __init__.pyi
stubs/ulab/numerical/: __init__.pyi
stubs/usb_hid/: __init__.pyi
stubs/usb_midi/: __init__.pyi
stubs/vectorio/: __init__.pyi
stubs/wifi/: __init__.pyi
stubs/wiznet/: __init__.pyi
