cmake_minimum_required(VERSION 3.19.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(bleepbloopmachine CXX)
add_executable(bleepbloopmachine src/main.cc)
add_library(controls src/controls.h src/controls.cc)
target_link_arduino_libraries(bleepbloopmachine AUTO_PUBLIC)
target_link_arduino_libraries(controls AUTO_PUBLIC)
target_link_libraries(bleepbloopmachine PRIVATE controls)
target_enable_arduino_upload(bleepbloopmachine)
