cmake_minimum_required(VERSION 3.19.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(bleepbloopmachine CXX)
add_executable(bleepbloopmachine src/main.cc)
add_library(controls src/controls.h src/controls.cc)
add_library(AudioSampleK src/kit/AudioSampleK.h src/kit/AudioSampleK.cpp)
add_library(AudioSampleS src/kit/AudioSampleS.h src/kit/AudioSampleS.cpp)
add_library(AudioSampleH src/kit/AudioSampleH.h src/kit/AudioSampleH.cpp)
add_library(AudioSampleO src/kit/AudioSampleO.h src/kit/AudioSampleO.cpp)
target_link_arduino_libraries(bleepbloopmachine AUTO_PUBLIC)
target_link_arduino_libraries(controls AUTO_PUBLIC)
target_link_arduino_libraries(AudioSampleK AUTO_PUBLIC)
target_link_arduino_libraries(AudioSampleS AUTO_PUBLIC)
target_link_arduino_libraries(AudioSampleH AUTO_PUBLIC)
target_link_arduino_libraries(AudioSampleO AUTO_PUBLIC)
target_link_libraries(bleepbloopmachine PRIVATE controls)
target_enable_arduino_upload(bleepbloopmachine)
